# UniVerse

./: .gitignore  README.md  announcements.py  eclass.py  main.py  new_eclass.py  new_scheduler.py  notification.py  ocr.py  optimized_scheduler.py  progress.py  pyproject.toml  requirements.txt  scheduler.py  test.py  user.py
